--- a/vignettes/ChineseVersion_Procedure.Rmd
+++ b/vignettes/ChineseVersion_Procedure.Rmd
@@ -22,75 +22,109 @@ devtools::install_github("DHLab-CGU/emr")
 library(emr)
 ```
 ### ICD-PCS-CODE 格式對照
-產生 ICD-9-PCS 的兩種格式的表格: Decimal 和 Short 
 
-供後續 ICD 格式轉換的功能使用 (`IcdPrDecimaltoShort 和 IcdPrShortToDecimal`) 
+本套件使用的處置編碼依照CMS (Centers for Medicare & Medicaid Services)所提供的處置編碼做為標準依據，並依照WHO訂定的處置編碼規則，產生 ICD-9-PCS 兩種格式的表格: `ICD9PrwithTwoFormat`
+
+供後續處置編碼格式轉換的功能使用 
 
 ICD-9-PCS
 ```r
-icd9_Short <- head(ICD9PrwithTwoFormat$Short,10)
-# c("0001", "0002", "0003", "0009", "0010", "0011", "0012", "0013", "0014", "0015")
-icd9_Decimal <- head(ICD9PrwithTwoFormat$Decimal, 10)
-# c("00.01", "00.02", "00.03", "00.09", "00.10", "00.11", "00.12", "00.13", "00.14", "00.15")
+# ICD-9-PCS_Short
+head(ICD9PrwithTwoFormat$Short)
+# c("0001", "0002", "0003", "0009", "0010", "0011")
+# ICD-9-PCS_Decimal
+head(ICD9PrwithTwoFormat$Decimal)
+# c("00.01", "00.02", "00.03", "00.09", "00.10", "00.11")
 ```
 ICD-10-PCS只有short的格式
 ```r
-icd10 <- head(prICD10$ICD,10)
-# c("0016071", "0016072", "0016073", "0016074", "0016075", "0016076", "0016077", "0016078", "001607B", "00160J0")
+# ICD-10-PCS_Short
+head(prICD10$ICD)
+# c("0016071", "0016072", "0016073", "0016074", "0016075", "0016076")
 ```
+### 範例資料
 
+以下功能介紹皆以`samplePrFile`做為範例，共有3位病患，170筆診斷紀錄
+```r
+head(samplePrFile)
+#    ID   ICD       Date
+# 1:  B  5681 2008-01-14
+# 2:  A  9774 2009-01-11
+# 3:  B 44.99 2009-05-10
+# 4:  C 07.59 2009-01-21
+# 5:  B  0205 2008-07-06
+# 6:  B  8812 2007-06-27
+```
 ## I. Code standarization
-ICD-9-PCS 兩種格式的轉換: Short <-> Decimal
 
-進行後續分組功能之前, 根據使用者使用的 ICD 格式進行格式的統一化, 分別兩種功能可以將 ICD 統一轉換為 Short 或 Decimal 的格式
+**ICD-9-PCS 兩種格式的轉換: Short <-> Decimal**
 
-將 ICD-PCS code 的格式統一轉成 Decimal
+將醫療大數據中的處置編碼進行編碼一致格式的轉換，以便後續處置編碼的標準化分群。依據CCS（Clinical Classifications Software）及Procedure class分組表中處置編碼格式如**表一**。
+
+**表一** 標準化分組之處置編碼格式
+
+|   |ICD format|
+|--------|----|
+|Clinical Classifications Software|short format|
+|Procedure class|short format|
+
+舉例來說，當使用者欲進行CCS的標準化分組，在分組前必須先將資料的處置編碼統一轉換為**short**的格式
+
+疾病分組時，為能區別處置編碼版本ICD-9/ICD-10，本套件依據**診斷日期**區分處置編碼的版本，其時間切割點可依使用者需求設定。  
+如使用者分析台灣的醫療資料，ICD-10使用日期設定為2016年1月1日；  
+如使用者分析美國的醫療資料，ICD-10使用日期設定為2015年10月1日。  
+
+如範例，區分處置編碼版本的日期為：2015年10月1日
+
+**將 ICD-PCS code 的格式統一轉成 Decimal**
 ```r
-# ICD-9
-ICD9_Decimal <- IcdPrShortToDecimal(icd9_Short)
-ICD9$Decimal
-# c("00.01", "00.02", "00.03", "00.09", "00.10", "00.11", "00.12", "00.13", "00.14", "00.15")
-
-# ICD-10
-ICD10_Decimal <- IcdPrShortToDecimal(icd10)
-ICD10$Decimal
-# c("0016071", "0016072", "0016073", "0016074", "0016075", "0016076", "0016077", "0016078", "001607B", "00160J0")
+decimal <- IcdPrShortToDecimal(PrDataFile = samplePrFile,
+                               icdColName = ICD, 
+                               dateColName = Date,
+                               icd10usingDate = "2015/10/01")
+head(decimal$ICD)
+# c("56.81", "97.74", "44.99", "07.59", "02.05", "88.12")
 ```
-將 ICD-PCS code 的格式統一轉成 Short
+**將 ICD-PCS code 的格式統一轉成 Short**
 ```r
-# ICD-9
-ICD9_Short <- IcdPrDecimalToShort(icd9_Decimal)
-ICD9_Short$Short
-# c("0001", "0002", "0003", "0009", "0010", "0011", "0012", "0013", "0014", "0015")
-
-# ICD-10
-ICD10_Short <- IcdPrDecimalToShort(icd10)
-ICD10_Short$Short
-# c("0016071", "0016072", "0016073", "0016074", "0016075", "0016076", "0016077", "0016078", "001607B", "00160J0")
+short <- IcdPrDecimalToShort(PrDataFile = samplePrFile,
+                             icdColName = ICD, 
+                             dateColName = Date,
+                             icd10usingDate = "2015/10/01")
+head(short$ICD)
+# c("5681", "9774", "4499", "0759", "0205", "8812")
 ```
+**warning message** (詳細流程請參考[診斷前處理與整合方法](https://dhlab-cgu.github.io/emr/articles/ChineseVersion_Diagnosis.html#i--code-standarization))
+
+醫療數據的處置編碼有可能誤植導致處置編碼錯誤，而錯誤的處置編碼將影響後續臨床疾病分組錯誤或是無法分組的情形。  
+為方便使用者修改錯誤的處置編碼，emr套件會提供warning message提醒使用者些錯誤的處置編碼。  
+
+編碼錯誤的種類：**格式錯誤 (Wrong format)**及**版本分類錯誤 (Wrong version)**
 
 ## II. Data integration
-將 ICD-9 及 ICD-10 code 依照不同的分類標準分類: 分散的 ICD-9-PCS 及 ICD-10-PCS 的診斷碼依照其臨床上意義相似的歸併整合為較大的群組, 標準化的分類以便於後續的整合統計分析使用
+將處置編碼依照不同的分類標準分類：分散的處置編碼依照其臨床上意義相似的歸併整合為較大的群組， 標準化的分類以便於後續的整合統計分析使用
 
-目前分類標準: CCS及 Procedure Class, 以下將分別介紹之 
+目前分類標準：CCS及 Procedure Class，以下將分別介紹之 
 
 ###一、臨床分類軟體 
-係以美國醫療照護政策研究品質局（AHRQ）為提供健康政策研究而所發展之「臨床分類軟體」(Clinical Classifications Software, CCS)。 CCS 分為單一階層及多階層的分群, 其階層是診斷分類可依使用需求調整分類標準
+係以美國醫療照護政策研究品質局（AHRQ）為提供健康政策研究而所發展之「臨床分類軟體」(Clinical Classifications Software, CCS)。 CCS 分為單一階層及多階層的分群，其階層是診斷分類可依使用需求調整分類標準
 
-單一階層: 較通用的分類
+* 單一階層: 較通用的分類  
+* 多階層: 將診斷碼分為較精確的分組  
 
-多階層: 將診斷碼分為較精確的分組
+**1) 單一階層分類**
 
-目前 ICD-9-PCS 的 CCS 版本為 2015 , ICD-10-PCS 的 CCS 版本為 2019
-
-####1) 單一階層分類
-`IcdPrToCCS` 可取得 ICD-9-PCS 及 ICD-10-PCS 相對應的 CCS 分類(CCS Category)及分類之敘述
-
-ICD-9-PCS 和 ICD-10-PCS 的ccs單一階層一致: 共231種
+`IcdPrToCCS` 可取得處置編碼相對應的 CCS 分類(CCS Category)及分類之敘述  
+ICD-9-PCS 和 ICD-10-PCS 的ccs單一階層一致：共231種
 ```r
 ## ICD to CCS category
-CCS <- IcdPrToCCS(PrDataFile, ID, ICD, Date, "2015-10-01", TRUE)
-#> head(CCS$groupedDT, 5)
+CCS <- IcdPrToCCS(PrDataFile = samplePrFile,
+                  idColName = ID,
+                  icdColName = ICD,        
+                  dateColName = Date,
+                  icd10usingDate = "2015-10-01",
+                  isDescription = TRUE)
+head(CCS$groupedDT, 5)
 #>        Short ID     ICD       Date                              CCS_CATEGORY_DESCRIPTION
 #>   1:    5681  B    5681 2008-01-14      Other OR therapeutic procedures of urinary tract
 #>   2:    9774  A    9774 2009-01-11    Other non-OR therapeutic procedures; female organs
@@ -98,15 +132,23 @@ CCS <- IcdPrToCCS(PrDataFile, ID, ICD, Date, "2015-10-01", TRUE)
 #>   4:    0759  C   07.59 2009-01-21                      Therapeutic endocrine procedures
 #>   5:    0205  B    0205 2008-07-06        Other OR therapeutic nervous system procedures
 ```
-####2) 多階層分類
-`IcdPrToCCSLvl` 可取得 ICD-9-PCS 及 ICD-10-PCS 相對應的 CCS 多階層分類 (Multiple ccs level)及分類之敘述
 
-ICD-9-PCS 共 3個階層 (Level 1~3)
+**2) 多階層分類**
 
-ICD-10-PCS 共 2個階層 (Level 1~2)
+`IcdPrToCCSLvl` 可取得處置編碼相對應的 CCS 多階層分類 (Multiple ccs level) 及分類之敘述
+
+* ICD-9-PCS 共 3個階層 (Level 1~3)  
+* ICD-10-PCS 共 2個階層 (Level 1~2)  
+
 ```r
-## ICD to CCS multiple level 2
-CCSLvl <- IcdPrToCCSLvl(samplePrFile, ID, ICD, Date, "2015-10-01", 2, TRUE)
+## ICD to CCS multiple level 2 description
+CCSLvl <- IcdPrToCCSLvl(PrDataFile = samplePrFile,
+                       idColName = ID,
+                       icdColName = ICD,        
+                       dateColName = Date,
+                       icd10usingDate = "2015-10-01",
+                       CCSLevel = 2,
+                       isDescription = TRUE)
 head(CCSLvl$groupedDT, 5)
 #>        Short ID     ICD       Date                                       CCS_LVL_2_LABEL
 #>   1:    5681  B    5681 2008-01-14      Other OR therapeutic procedures of urinary tract
@@ -115,18 +157,21 @@ head(CCSLvl$groupedDT, 5)
 #>   4:    0759  C   07.59 2009-01-21                Other therapeutic endocrine procedures
 #>   5:    0205  B    0205 2008-07-06        Other OR therapeutic nervous system procedures
 ```
+
 ### 二、Procedure Class 
-由美國醫療照護政策研究品質局（AHRQ）提供的HCUP Classes, 將檢查與處置碼基於其特性分組, 共ICD-PCS code分為下列四個組別:
+由美國醫療照護政策研究品質局（AHRQ）提供的HCUP Classes，將檢查與處置碼基於其特性分組，共ICD-PCS code分為下列四個組別：  
+ 1. Minor Diagnostic：非手術室執行之診斷類處置  
+ 2. Minor Therapeutic：非手術室執行之治療類處置  
+ 3. Major Diagnostic：需在手術室執行之診斷類處置  
+ 4. Major Therapeutic：需在手術室執行之治療類處置  
  
-1.Minor Diagnostic: 非手術室執行之診斷類處置
-
-2.Minor Therapeutic: 非手術室執行之治療類處置
-
-3.Major Diagnostic: 需在手術室執行之診斷類處置
-
-4.Major Therapeutic: 需在手術室執行之治療類處置
 ```r
-ProcedureClass <- IcdPrToProcedureClass(samplePrFile, ID, ICD, Date, "2015-10-01", TRUE)
+ProcedureClass <- IcdPrToProcedureClass(PrDataFile = samplePrFile,
+                                        idColName = ID,
+                                        icdColName = ICD,      
+                                        dateColName = Date,
+                                        icd10usingDate = "2015-10-01",
+                                        isDescription = TRUE)
 head(ProcedureClass$groupedDT, 5)
 #>        Short ID     ICD       Date PROCEDURE_CLASS
 #>   1:    5681  B    5681 2008-01-14               4
@@ -136,7 +181,7 @@ head(ProcedureClass$groupedDT, 5)
 #>   5:    0205  B    0205 2008-07-06               4
 ```
 
-## III. Reference
+## Reference
 
 ### I. Code standarization
 
@@ -149,6 +194,8 @@ https://www.findacode.com/search/search.php
 https://www.cms.gov/Medicare/Quality-Initiatives-Patient-Assessment-Instruments/HospitalQualityInits/Downloads/HospitalAppendix_F.pdf
 
 ### II. Data integration
+
+目前 ICD-9-PCS 的 CCS 版本為 2015 , ICD-10-PCS 的 CCS 版本為 2019
 
 **臨床分類軟體 (Clinical Classifications Software, CCS)**
 
